fixing the layout/scroll weirdness on iOS Safari

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,10 +7,25 @@ html {
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
   min-height: -webkit-fill-available;
   font-size: 18px;
   text-rendering: optimizeLegibility;
   @apply bg-gray-100;
+  display: flex;
+  flex-direction: column;
+}
+
+#___gatsby {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+#gatsby-focus-wrapper {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
 
 h1 {
